# Simple_Raytracer_Cpp

./: CMakeLists.txt  camera.cpp  camera.h  color.cpp  color.h  engine.cpp  engine.h  image.cpp  image.h  light_source.h  main  main.cpp  model.h  point3.cpp  point3.h  point_light.h  scene.h  sphere.cpp  sphere.h  texture_material.h  uniform_texture.cpp  uniform_texture.h  vector3.cpp  vector3.h
src/: engine.cc  engine.hh  image.cc  image.hh  main.cc  scene.hh
src/geometry/: point3.cc  point3.hh  vector3.cc  vector3.hh
src/scene_objects/: blob.cc  blob.hh  camera.cc  camera.hh  light_source.hh  model.hh  point_light.cc  point_light.hh  sphere.cc  sphere.hh
src/textures/: color.cc  color.hh  texture_material.hh  uniform_texture.cc  uniform_texture.hh
test/: SphereTest.ppm
